logs/memory-monitor.log
file:///root/.openclaw/workspace/memory-health-monitor.js:14
  private monitorInterval: NodeJS.Timeout;
          ^^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier 'monitorInterval'
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:437:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:484:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)

Node.js v22.13.1
